# eks-fargate-cost-calculator

./: README.md  main.py  pyproject.toml
