[tool.poetry]
name = "eks-fargate-cost-calculator"
version = "0.1.0"
description = ""
authors = ["Amit <amit.arie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
kubernetes = "^23.6.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
